# server/docs/swagger.json
@@ -852,6 +852,49 @@
                 }
             }
         },
+        "/api/manage/setting/get_a_map_key": {
+            "get": {
+                "description": "获取AMap配置项",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "配置项"
+                ],
+                "summary": "获取AMap配置项",
+                "operationId": "获取AMap配置项",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "配置名",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "配置值",
+                        "name": "value",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\":{\"a_map_key\":\"the a map key\"}",
+                        "schema": {
+                            "$ref": "#/definitions/com_model.CommonReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/manage/setting/get_setting_all": {
             "post": {
                 "description": "获取所有配置项",
